# space_memory

./: .gitignore  PlotResults.py  PlotRewardsResults.py  PlotSuccesRate.py  README.md  conda_enviro.yaml  download_remotes_done.py  locks.py  main.py  notatki  pack_new_done.py  paper.odt  plotactionvalues.py  prepareOS.sh  remote_config.py  render_simulation.py  results.json  runQueue.py  runTestQueue.py  run_experiment.py  run_experiment_queue.py  run_soft_experiment.py  runq.sh  runt.sh  scratch.py  selected_runs.json  series_factory.py  spawn_job.py  split_training.py  status.py  synchronize_done.py  template_factory.py  test_experiment.py  test_script.py  test_script_copy.py  unpack_queue.py
components/: logging_tools.py
components/environment/: env_wrapper.py
components/environment/space_enviro/: CMakeLists.txt  environment_controller.cpp  environment_controller.h
components/environment/space_enviro/Entities/: checkpoint.h
components/environment/space_enviro/Entities/Data/: base_entity.h  ship.h
components/environment/space_enviro/Rendering/: render_engine.h
components/environment/space_enviro/Rendering/Primitives/: render_ship.h
components/environment/space_enviro/Scenario/: base.h  checkpoint_double.h  checkpoint_single.h  checkpoint_single_v1.h  checkpoint_single_v2.h  load.h  stopping.hpp
components/environment/space_enviro/Utils/: switch_bools.hpp  waiter.h
components/model/: activations.py  linear.py  load_model.py
components/rl_algorithm/: dqn.py
components/rl_algorithm/utils/: action_selection.py  gym_wrapper.py  loss.py  optimizers.py  replay_storage.py  reward_manipulation.py
environment/: test_script.py  test_script_copy.py
environment/space_enviro/: CMakeLists.txt  environment_controller.cpp  environment_controller.h  global_config.h
environment/space_enviro/Entities/Data/: dynamic_entity.h
environment/space_enviro/Rendering/: render_engine.h
environment/space_enviro/Scenario/: checkpoints.h
environment/space_enviro/Utils/: randoms.hpp
experiments/: clear_all.py  pack_new_done.py  unpack_queue.py
experiments/templates/stopping_rectangle_linear_dqn/v0/parameters/: rl_algorithm.json  training.json
experiments/templates/stopping_rectangle_linear_dqn/v1/parameters/: environment.json  general.json  model.json  training.json
failed/DQN/: Separate_action_space.py  Single_Action_space.py
paper/: paper.aux  paper.bbl  paper.bib.bak  paper.blg  paper.dvi  paper.lof  paper.lot  paper.out  paper.tex.bak  paper.toc
parameters/: json_factory.py  stopping_rectangle_linear_dqn
parameters/action_selection/: eps_greedy.json
parameters/environment/: universal.json
parameters/environment/scenarios/: checkpoint_single.json  checkpoint_single_v2.json  stopping.json
parameters/environment/ship_statistics/: default_ships.json
parameters/model/: fat_linear.json  rectangle_linear.json
parameters/rl_algorithm/: dqn.json
parameters/training/: default.json  long500k.json
prev_attempts/: Simple_DQN+MDP.py  Single.py  rl_utils  space_enviro
prev_attempts/bugged_tofix/: Separate_action_space.py  Single_Action_space.py  gym_fullNstep.py  n_step_qlearning-gym.py  n_step_qlearning.py
prev_attempts/trash/: main_old.py
rl_utils/: action_selection.py  environment.py  replay_storage.py
space_enviro/: CMakeLists.txt  constants.h  entities_data.h  entity_manager.cpp  entity_manager.h  environment_controller.cpp  environment_controller.h  global_config.h  main.cpp  physics.h  render_engine.cpp  render_engine.h  team_info.h  waiter.h
space_enviro/Entities/: basic_render_types.h  checkpoint.h  dynamic_array.hpp  entities_data.h  ship_array.hpp
space_enviro/Entities/Data/: base_entity.h  dynamic_entity.h  ship.h
space_enviro/Rendering/: basic_render_types.h  render_engine.h
space_enviro/Rendering/Observations/: render_distance.hpp  render_ship_velocity.hpp
space_enviro/Rendering/Primitives/: render_ship.h  render_square.hpp
space_enviro/Scenario/: base.h  checkpoint_scenario.h  checkpoints.h  load_scenario.hpp  scenario_base.h  stopping.hpp
space_enviro/Scenarios/: checkpoint_scenario.h  scenario_base.h
space_enviro/Utils/: switch_bools.hpp
